--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {
-  "name": "Space Limit",
+  "name": "The Space Limit",
+  "short_name": "Space Limit",
   "icons": [
     {
       "src": "image/launcher-icon-0-75x.png",
