--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "game HTML5 avoids the line",
   "main": "game.js",
   "dependencies": {
+    "chart.js": "^2.5.0",
     "nipplejs": "^0.6.7"
   },
   "devDependencies": {},
